<resources>
    <string name="app_name">AisleDesign</string>
    <string name="header_get_otp">Get OTP</string>
    <string name="header_enter_number">Enter Your Phone Number</string>
    <string name="btn_continue">Continue</string>
    <string name="number_prefix">+91</string>
    <string name="static_number">+91 9876543212</string>
    <string name="header_enter_otp">Enter The OTP</string>
    <string name="title_activity_notes">MainActivity</string>
    <string name="title_discover">Discover</string>
    <string name="title_notes">Notes</string>
    <string name="title_matches">Matches</string>
    <string name="title_profile">Profile</string>
    <string name="header_notes">Notes</string>
    <string name="header_message">Personal message to you</string>
    <string name="label_tap_review">Tap to review 50+ notes</string>
    <string name="desc_banner_img">Banner image</string>
    <string name="header_interested">Interested In You</string>
    <string name="header_upgrade">Premium members can view all their likes at once</string>
    <string name="btn_upgrade">Upgrade</string>
    <string name="desc_likes_img">Likes profile image</string>
</resources>